fix(content-page-edit): remove scrollbar for titles inside content pages

--- a/demo/src/react-admin/modules/content-page/views/ContentPageEdit.scss
+++ b/demo/src/react-admin/modules/content-page/views/ContentPageEdit.scss
@@ -43,7 +43,6 @@ $content-top-bar-and-tabs-height: 113px;
 
 	.c-content-block-preview > .o-container {
 		overflow-wrap: break-word;
-		overflow-x: hidden;
 	}
 }
 
